// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with link 1`] = `
<div
  class="sc-AxiKw ePUWgf"
  data-testid="files-manager-item"
>
  <div
    class="sc-AxirZ btYaIv sc-AxhUy iKxUnG"
    data-testid="icon-VoiceRecorder"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <div
    class="sc-AxgMl ioCkNe"
  >
    <p
      class="sc-AxjAm eGfSTk"
    >
      Voice Recorder
    </p>
    <p
      class="sc-AxjAm Oohkf"
    >
      3 files (4.00 GB)
    </p>
  </div>
  <a
    class="sc-AxhCb uAwSu"
    href="#/tools/voice-recorder"
  >
    <div
      class="sc-AxirZ btYaIv"
      data-testid="icon-Arrow"
    >
      <test-file-stub
        image="test-file-stub"
      />
    </div>
  </a>
</div>
`;

exports[`should match snapshot without link 1`] = `
<div
  class="sc-AxiKw ePUWgf"
  data-testid="files-manager-item"
>
  <div
    class="sc-AxirZ btYaIv sc-AxhUy iKxUnG"
    data-testid="icon-VoiceRecorder"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </div>
  <div
    class="sc-AxgMl ioCkNe"
  >
    <p
      class="sc-AxjAm eGfSTk"
    >
      Voice Recorder
    </p>
    <p
      class="sc-AxjAm Oohkf"
    >
      3 files (4.00 GB)
    </p>
  </div>
</div>
`;
